<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewContract">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="44dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:onClick="createMyPDF"
                android:text="@string/pdfFinish"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ContractNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:text="@string/contractNumber"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/ContractNumberInput"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:ems="15"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="152dp"
                android:text="@string/contractPartner"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/ContractPartnerName"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="268dp"
                android:ems="8"
                android:hint="@string/name"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/ContractPartnerFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="208dp"
                android:ems="8"
                android:hint="@string/firstName"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="348dp"
                android:text="@string/docPhotos"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="876dp"
                android:text="@string/signature"
                android:textSize="22sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="192dp"
                        android:layout_height="192dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="400dp"
                        android:maxWidth="128dp"
                        android:maxHeight="128dp"
                        app:srcCompat="@drawable/kamera" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="192dp"
                        android:layout_height="192dp"
                        android:layout_marginStart="304dp"
                        android:layout_marginTop="400dp"
                        android:maxWidth="128dp"
                        android:maxHeight="128dp"
                        app:srcCompat="@drawable/kamera" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="192dp"
                        android:layout_height="192dp"
                        android:layout_marginStart="556dp"
                        android:layout_marginTop="220dp"
                        android:maxWidth="128dp"
                        android:maxHeight="128dp"
                        app:srcCompat="@drawable/kamera" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="192dp"
                        android:layout_height="192dp"
                        android:layout_marginStart="292dp"
                        android:layout_marginTop="440dp"
                        android:maxWidth="128dp"
                        android:maxHeight="128dp"
                        app:srcCompat="@drawable/kamera" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="192dp"
                        android:layout_height="192dp"
                        android:layout_marginStart="304dp"
                        android:layout_marginTop="632dp"
                        android:maxWidth="128dp"
                        android:maxHeight="128dp"
                        app:srcCompat="@drawable/kamera" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="192dp"
                        android:layout_height="192dp"
                        android:layout_marginStart="556dp"
                        android:layout_marginTop="453dp"
                        android:maxWidth="128dp"
                        android:maxHeight="128dp"
                        app:srcCompat="@drawable/kamera" />
                </LinearLayout>
            </HorizontalScrollView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="632dp"
                android:onClick="takePicture"
                android:text="@string/takePhoto"
                android:textSize="22sp" />

            <com.example.simpleexchangeprotocol.PaintView
                android:id="@+id/paintView"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginStart="188dp"
                android:layout_marginTop="952dp"
                android:textSize="18sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="216dp"
                android:layout_marginTop="868dp"
                android:onClick="ClearDrawingPad"
                android:text="@string/clearDrawboard"
                android:textSize="22sp" />



        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>